@@ -151,7 +151,7 @@ world.loc.Forest.Outskirts.links.push(new Link(
 		Text.AddOutput("Behind you is the way back to the crossroads.<br/>");
 	},
 	function() {
-		MoveToLocation(world.loc.Plains.Crossroads, {minute: 15});
+		MoveToLocation(world.loc.Plains.Crossroads, {hour: 2});
 	}
 ));
 world.loc.Forest.Outskirts.links.push(new Link(
