@@ -9,6 +9,8 @@ Version 0.3r
 ------------
 * New patreon sponsored content by Del:
  - Kingdom patrol/Bandit encounter on the plains.
+ - Hitching a ride to Rigard (short, at random).
+* It now takes significantly longer to travel between hub locations (Rigard, Crossroads, Desert, Lake, Forest).
 
 --------------------------------------------
              PREVIOUS VERSIONS
